--- a/iris.ipynb
+++ b/iris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,9 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import plot_confusion_matrix\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import precision_recall_curve\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -511,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +523,29 @@
       "0.9\n",
       "[[ 7  0  0]\n",
       " [ 0 11  1]\n",
-      " [ 0  2  9]]\n",
+      " [ 0  2  9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# validate our model\n",
+    "knn = KNeighborsClassifier()\n",
+    "knn.fit(X_train, Y_train)\n",
+    "predictions = knn.predict(X_validation)\n",
+    "##print out the classification results\n",
+    "print(accuracy_score(Y_validation, predictions))\n",
+    "print(confusion_matrix(Y_validation, predictions))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "                 precision    recall  f1-score   support\n",
       "\n",
       "    Iris-setosa       1.00      1.00      1.00         7\n",
@@ -536,13 +560,7 @@
     }
    ],
    "source": [
-    "# validate our model\n",
-    "knn = KNeighborsClassifier()\n",
-    "knn.fit(X_train, Y_train)\n",
-    "predictions = knn.predict(X_validation)\n",
-    "##print out the classification results\n",
-    "print(accuracy_score(Y_validation, predictions))\n",
-    "print(confusion_matrix(Y_validation, predictions))\n",
+    "#print the report\n",
     "print(classification_report(Y_validation, predictions))"
    ]
   }
